--- a/index.html
+++ b/index.html
@@ -1,48 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Awesome Books</title>
-  </head>
-  <body>
-    <nav>
-      <p>Awesome books</p>
-      <ul class="navlist">
-        <li><button id="list">List |</button></li>
-        <li><button id="addnew">Add new |</button></li>
-        <li><button id="contact">Contact</button></li>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="https://kit.fontawesome.com/e83d856101.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Awesomebooks</title>
+  <link rel="stylesheet" href="./index.css">
+  <script src="https://cdn.jsdelivr.net/npm/luxon@2.1.1/build/global/luxon.min.js"></script>
+</head>
+
+<body>
+  <main class="container">
+
+
+    <nav class="toolbar">
+      <a href="./index.html">Awesome Books</a>
+
+      <ul class="navlinks">
+        <li class="link">
+          <a href="#bookStore" id="library">Book List</a>
+        </li>
+        <li class="link">
+          <a href="#addbook" id="addLink">Add Book</a>
+        </li>
+        <li class="link">
+          <a href="#contact" id="contactLink">Contact</a>
+        </li>
       </ul>
     </nav>
-    <main class="container">
-      <p class="currentdate"></p>
-      <section class="list">
-        <h1>All awesome books</h1>
-        <div class="booksCont" id="booksCont"></div>
-        <br />
-      </section>
-      <section class="addBook" hidden>
-        <h3>Add a new Book</h3>
-        <input type="text" id="title" placeholder="Add Book Title" required />
-        <input type="text" id="author" placeholder="Add Book Author" required />
-        <button type="submit" id="addBtn">Add</button>
-      </section>
-      <section class="contact" hidden>
-        <h3>Contact Information</h3>
-        <p>
-          Do you have any question or you just want to say "Hello"? yon can
-          reach out as
-        </p>
-        <ul class="contactlist">
-          <li>Our email:</li>
-          <li>Our phone number:</li>
-          <li>Our address</li>
-        </ul>
-      </section>
-    </main>
-    <footer><p>Copyright ...</p></footer>
-    <script src="./js/script.js"></script>
-  </body>
+    <div class="dateAndTime" id="dateDisplay">sdf</div>
+
+
+    <section id="bookStore">
+      <div id="store">
+        <div class="empty hide" id="empty-id">
+        </div>       
+      </div>
+      <button id="addbtn1" type="submit">Add a book</button>
+      <hr>
+    </section>
+
+    <section id="addBook">
+      <div class="library">
+        <h2 id="addnewbooktitle">Add a new Book</h2>
+        <form action="#" id="form-id">
+          <input type="text" name="title" id="title" placeholder="Add Book Title" required>
+          <input type="text" name="author" id="author" placeholder="Add Book Author" required>
+          <button id="add-btn" type="submit">Add a book</button>
+      </div>
+      </form>
+    </section>
+    <section id="contact" class="contact">
+      <div class="cont">
+        <h2>Contact Information</h2>
+        <div class="contactInfo">
+          <h4>
+            Do you have any questions or want to say "Hello"?<br />You can
+            reach out to me:
+          </h4>
+          <ul>
+            <li>
+              Via e-mail: adamabdimulhi.001@gmail.com
+            </li>
+            <li>
+              <h5>My phone number:+254759935007</h5>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>
+        Copyright
+        <strong>Abdimulhin Adan</strong> </a>
+        &copy;2022
+      </p>
+    </footer>
+  </main>
+  <script type="module" src="./index.js"></script>
+</body>
+
 </html>
